syntax = "proto3";

import "google/protobuf/empty.proto";

package mainService;

option go_package = "serverPart/gen/proto/mains;mains";

//
service AccountingSystem {
  
	rpc GetAllPermissions(google.protobuf.Empty) returns (List_Permissions);
	rpc GetItemsByObject(PInt) returns (List_Items);
	rpc GetAllObjects(google.protobuf.Empty) returns (List_Objects);
	rpc GetAllGroupingProps(google.protobuf.Empty) returns (List_GroupingProps);
	rpc GetGroupingPropsByItem(PInt) returns (List_GroupingProps);
	rpc GetAllTypesOfUnit(google.protobuf.Empty) returns (List_TypesOfUnit);
	rpc GetAllTypesOfItems(google.protobuf.Empty) returns (List_TypeOfItems);
	rpc GetAllRoles(google.protobuf.Empty) returns (List_Roles);
	rpc GetAllUsers(google.protobuf.Empty) returns (List_Users);
	rpc GetAllNames(google.protobuf.Empty) returns (List_NameItems);
	rpc GetAllProducers(google.protobuf.Empty) returns (List_Producers);
	rpc GetMetaDataOfItem(PInt) returns (List_MetaData);
	rpc GetJournal(google.protobuf.Empty) returns (ProtoJournal);
	rpc GetAllMetaDataTypes(google.protobuf.Empty) returns (List_MetaDataTypes);

	rpc AddItem(ProtoItem) returns (PInt);
	rpc UpdateItem(ProtoItem) returns (PBool);
	rpc RemoveItem(ProtoItem) returns (PBool);

	rpc AddObject(ProtoObject) returns (PInt);
	rpc UpdateObject(ProtoObject) returns (PBool);
	rpc RemoveObject(ProtoObject) returns (PBool);

	rpc AddUser(ProtoUser) returns (PInt);
	rpc UpdateUser(ProtoUser) returns (PBool);
	rpc RemoveUser(ProtoUser) returns (PBool);

	rpc AddRole(ProtoRole) returns (PInt);
	rpc UpdateRole(ProtoRole) returns (PBool);
	rpc RemoveRole(ProtoRole) returns (PBool);

	rpc AddGroupingProperty(ProtoGroupingProperty) returns (PInt);
	rpc AddProducer(ProtoProducer) returns (PInt);
	rpc AddNameItem(ProtoNameItem) returns (PInt);
	rpc AddTypeOfUnit(ProtoTypeOfUnit) returns (PInt);
	rpc AddItemMetaData(ProtoItemMetaData) returns (PInt);
	rpc AddObjectMetaData(ProtoObjectMetadata) returns (PInt);
	rpc AddRecordToJournal(ProtoJournalRecord) returns (PBool);

	rpc AddGroupingPropertyOfItem(ChangeGroupingPropertyofItem) returns (PBool);
	rpc RemoveGroupingPropertyOfItem(ChangeGroupingPropertyofItem) returns (PBool);

	rpc RemoveItemMetaData(ProtoItemMetaData) returns (PBool);
	rpc RemoveObjectMetadata(ProtoObjectMetadata) returns (PBool);

	rpc CheckActive(google.protobuf.Empty) returns (google.protobuf.Empty);

	rpc SetGroupingPropertiesOfItem(ChangeGroupingPropertiesofItem) returns (PBool);

	rpc GetAllObjectMetaData(PInt) returns (List_ProtoObjectMetadata);

	rpc StartBackup(google.protobuf.Empty) returns (stream ProtoBackupChunk);
	rpc GetBackupStatus(google.protobuf.Empty) returns (ProtoBackupStatusResponse);

	rpc AddSessionData(google.protobuf.Empty) returns (PBool);
	rpc AbortSessionData(google.protobuf.Empty) returns (google.protobuf.Empty);

}

message StrMes{
	string id =1;
}

message ProtoBackupChunk{
	bool is_last =  1;
	bytes data = 2;
}

message ProtoBackupStatusResponse {
  bool is_done = 1;
  string error_message = 2;
  int32 file_size_in_8kb_chunks = 3;
  bool is_in_process = 4;
}

message ChangeGroupingPropertiesofItem{
	List_GroupingProps props = 1;
	int32 itemId = 2;
}


message ChangeGroupingPropertyofItem{
	ProtoGroupingProperty prop = 1;
	int32 itemId = 2;
}

message PBool{
	bool val = 1;
}

message PInt{
	int32 val = 1;
}

message List_Items{
	repeated ProtoItem items = 1;
}

message List_Objects{
	repeated ProtoObject objs = 1;
}

message List_GroupingProps{
	repeated ProtoGroupingProperty props = 1;
}

message List_TypesOfUnit{
	repeated ProtoTypeOfUnit types = 1;
}

message List_Roles{
	repeated ProtoRole roles = 1;
}

message List_Users{
	repeated ProtoUser users = 1;
}

message List_NameItems{
	repeated ProtoNameItem names = 1;
}

message List_Producers{
	repeated ProtoProducer producers = 1;
}

message List_MetaData{
	repeated ProtoItemMetaData metadata = 1;
}

message List_Permissions{
	repeated ProtoPermission permissions = 1;
}

message List_TypeOfItems{
	repeated ProtoTypeOfItem types = 1;
}

message List_MetaDataTypes{
	repeated ProtoMetaDataType types = 1;
}

message List_ProtoObjectMetadata{
	repeated ProtoObjectMetadata metadata = 1;
}

message ProtoUser{
	int32 id = 1;
	string name = 2;
	string description = 3;
	repeated int32 roles = 4;
	string password = 5;
}

message ProtoRole{
	int32 id = 1;
	string name = 2;
	string description = 3;
	repeated int32 permissions = 4;
}

message ProtoPermission{
	int32 id = 1;
	string name = 2;
}

message ProtoPermissions{
	repeated int32 permissions = 3;
}

message ProtoItemMetaData{
	int32 id = 1;
	string name = 2;
	int32 itemId = 3;
	bytes data = 4;
	int32 typeId = 5;
}

message ProtoObjectMetadata{
	int32 id = 1;
	string name = 2;
	int32 objId = 3;
	bytes data = 4;
	int32 typeId = 5;
}

message ProtoMetaDataType{
	int32 id = 1;
	string name = 2;
}

message ProtoGroupingProperty{
	int32 id = 1;
	string name = 2;
}

message ProtoJournalRecord{
	int32 id = 1;
	string text = 2;
}

message ProtoJournal{
	repeated ProtoJournalRecord records = 1;
}

message ProtoNameItem{
	int32 id = 1;
	string name = 2;
}

message ProtoProducer{
	int32 id = 1;
	string name = 2;
}

message ProtoTypeOfUnit{
	int32 id = 1;
	string name = 2;
}

message ProtoTypeOfItem{
	int32 id = 1;
	string name = 2;
}

message ProtoObject{
	int32 id = 1;
	string name = 2;
	string description = 3;
	string address = 4;
}

message ProtoItem{
	int32 id = 1;
	ProtoObject obj = 2;
	ProtoTypeOfUnit unitType = 3;
	double countOfUnits = 4;
	double pricePerUnit = 5;
	double ExpectedCost = 6;
	ProtoProducer producer = 7;
	string description = 8;
	ProtoTypeOfItem type = 9;
	ProtoNameItem nameItem = 10;
	double countOfUsedUnits = 11;
}

